# okesl-config-ui

./: .gitignore  LICENSE  README.md  imgui.cpp  meson.build
.github/workflows/: ci.yml
include/: keycode.h  keystr.h
resources/: imgui.ini
resources/assets/: ccmds.json  cvars.json
resources/cfg/: autoexec.cfg  layout.cfg  more_controls.cfg
src/: ControlsManager.cpp  ControlsManager.h  CvarManager.cpp  CvarManager.h  main.cpp
